[SR-5856] Fix diagnostic for static stored properties in protocol extensions (#11930)

* [SR-5856] Fix diagnostic message for static stored properties not supported in protocol extensions

* fix test failure in decl/var/properties.swift
this looks like a better place to test the new behavior, so removing changes to static_var.swift